# minishell

./: .gitignore  CMakeLists.txt  Makefile  bonus.c  chdir.c  environ.c  exec.c  helpers.c  home.c  intro.c  minishell.c  minishell.h  persist.c  rick.c  utility.c
libft/: Makefile  ft_atoi.c  ft_error_handler.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_unsigned.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memset.c  ft_mylog.c  ft_putchar.c  ft_putstr.c  ft_realloc.c  ft_split_whitespaces.c  ft_strdup.c  ft_strjoin.c  ft_strrchr.c  ft_strsplit.c  ft_strtrim.c  libft.h
libraries/ft_printe/: Makefile  ft_conversions_alpha_e.c  ft_conversions_numerical_e.c  ft_flags_1_e.c  ft_flags_2_e.c  ft_handlers_e.c  ft_hexadecimal_e.c  ft_printe.c  ft_printe.h  ft_putwidth_e.c
libraries/ft_printf/: Makefile  ft_conversions_alpha.c  ft_flags_2.c  ft_handlers.c  ft_hexadecimal.c  ft_printf.c  ft_printf.h  ft_putwidth.c
libraries/get_next_line/: Makefile
