cmake_minimum_required(VERSION 3.6)
project(minishell)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES minishell.c minishell.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_countdigits.c
        libft/ft_countwords.c
        libft/ft_error_handler.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isupper.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_itoa_unsigned.c
        libft/ft_lengthofword.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_mylog.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sq_rt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strtrim_c.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        libraries/ft_printf/ft_conversions_alpha.c
        libraries/ft_printf/ft_conversions_numerical.c
        libraries/ft_printf/ft_flags_1.c
        libraries/ft_printf/ft_flags_2.c
        libraries/ft_printf/ft_handlers.c
        libraries/ft_printf/ft_hexadecimal.c
        libraries/ft_printf/ft_printf.c
        libraries/ft_printf/ft_printf.h
        libraries/ft_printf/ft_putwidth.c
        libraries/ft_printe/ft_conversions_alpha_e.c
        libraries/ft_printe/ft_conversions_numerical_e.c
        libraries/ft_printe/ft_flags_1_e.c
        libraries/ft_printe/ft_flags_2_e.c
        libraries/ft_printe/ft_handlers_e.c
        libraries/ft_printe/ft_hexadecimal_e.c
        libraries/ft_printe/ft_printe.c
        libraries/ft_printe/ft_printe.h
        libraries/ft_printe/ft_putwidth_e.c
        libraries/get_next_line/get_next_line.c
        libraries/get_next_line/get_next_line.h persist.c utility.c environ.c exec.c chdir.c home.c helpers.c libft/ft_split_whitespaces.c intro.c bonus.c)
add_executable(minishell ${SOURCE_FILES})